Prevent dropdowns for jumping to top of page

--- a/sites/all/themes/custom/parliamentwatch/scss/_filterbar.scss
+++ b/sites/all/themes/custom/parliamentwatch/scss/_filterbar.scss
@@ -97,6 +97,7 @@
   color: $mediumGray;
   background: $white;
   margin-bottom: 1px;
+  cursor: pointer;
   .form__item {
     margin-bottom: 0;
   }
